<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentElementLabel"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="358dp"
        android:text="@string/label_current_element"
        app:layout_constraintEnd_toStartOf="@+id/textPlannerLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDrive" />

    <TextView
        android:id="@+id/currentElement"
        android:layout_width="410dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/placeholder_current_element"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textPlannerLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentElementLabel" />

    <TextView
        android:id="@+id/textPlannerLog"
        android:layout_width="466dp"
        android:layout_height="472dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:text="@string/text_planner_log_waiting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRunPlan"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:onClick="runPlan"
        android:text="@string/button_run_plan"
        app:layout_constraintStart_toEndOf="@+id/buttonReadPlan"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReadPlan"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="readPlan"
        android:text="@string/button_read_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentDrive"
        android:layout_width="410dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/placeholder_current_drive"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textPlannerLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDriveLabel" />

    <TextView
        android:id="@+id/currentDriveLabel"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="378dp"
        android:text="@string/label_current_drive"
        app:layout_constraintEnd_toStartOf="@+id/textPlannerLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReadPlan" />

</android.support.constraint.ConstraintLayout>